# OptiTrack-Motive-2-Client

./: .gitignore  .rosinstall  CMakeLists.txt  LICENSE  README.md  motionCaptureReceiver.cpp  package.xml
include/optitrack_motive_2_client/: motionCaptureClientFramework.cpp  motionCaptureClientFramework.h
src/: optitrack_motive_2_client_node.cpp
